infra/digitalocean/00-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: sfp-portal
  labels:
    name: sfp-portal
