infra/digitalocean/01-configmap.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: sfp-portal
  labels:
    name: sfp-portal
