infra/digitalocean/09-migrations-and-seeds.yaml
apiVersion: v1
kind: Pod
metadata:
  name: api-migrate-once
  namespace: sfp-portal
spec:
  restartPolicy: Never
  imagePullSecrets:
    - name: regcred
  containers:
    - name: api-migrate
      image: registry.digitalocean.com/sfp-portal/api:latest
      imagePullPolicy: Always
      command: ["node"]
      args: ["src/migrations/runMigrations.js"]
---
apiVersion: v1
kind: Pod
metadata:
  name: api-seed-animals
  namespace: sfp-portal
spec:
  restartPolicy: Never
  imagePullSecrets:
    - name: regcred
  containers:
    - name: api-seed-animals
      image: registry.digitalocean.com/sfp-portal/api:latest
      imagePullPolicy: Always
      command: ["node"]
      args: ["src/seeds/seedAnimals.js"]
---
apiVersion: v1
kind: Pod
metadata:
  name: api-seed-volunteers
  namespace: sfp-portal
spec:
  restartPolicy: Never
  imagePullSecrets:
    - name: regcred
  containers:
    - name: api-seed-volunteers
      image: registry.digitalocean.com/sfp-portal/api:latest
      imagePullPolicy: Always
      command: ["node"]
      args: ["src/seeds/seedVolunteers.js"]
---
apiVersion: v1
kind: Pod
metadata:
  name: api-seed-applications
  namespace: sfp-portal
spec:
  restartPolicy: Never
  imagePullSecrets:
    - name: regcred
  containers:
    - name: api-seed-applications
      image: registry.digitalocean.com/sfp-portal/api:latest
      imagePullPolicy: Always
      command: ["node"]
      args: ["src/seeds/seedApplications.js"]
